Project

General

Profile

Actions

Bug #22469

closed

creating a zone with mistake tier-type is not exit

Added by Chang Liu over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

➜  build git:(rgw-tier-type-check) ✗ ./bin/radosgw-admin zone create --rgw-zonegroup=s3-export --rgw-zone=zone2 --endpoints=localhost:8005 --access-key=access --secret=secret --tier-type=awsasdf --tier-config=s3_endpoint=http://localhost:8006,access_key=0555b35654ad1656d804,secret=h7GhxuBLTrlhVUyxSPUKUV8r/2EI4ngqJxD7iBdBYLhwluN30JaT3Q==
2017-12-18 16:50:16.812 7f8bb3aa62c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-12-18 16:50:16.816 7f8bb3aa62c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-12-18 16:50:16.824 7f8bb3aa62c0 -1 WARNING: all dangerous and experimental features are enabled.
{
    "id": "c5d2dccc-98e4-4e43-b0a3-4036ca8d70a4",
    "name": "zone2",
    "domain_root": "zone2.rgw.meta:root",
    "control_pool": "zone2.rgw.control",
    "gc_pool": "zone2.rgw.log:gc",
    "lc_pool": "zone2.rgw.log:lc",
    "log_pool": "zone2.rgw.log",
    "intent_log_pool": "zone2.rgw.log:intent",
    "usage_log_pool": "zone2.rgw.log:usage",
    "reshard_pool": "zone2.rgw.log:reshard",
    "user_keys_pool": "zone2.rgw.meta:users.keys",
    "user_email_pool": "zone2.rgw.meta:users.email",
    "user_swift_pool": "zone2.rgw.meta:users.swift",
    "user_uid_pool": "zone2.rgw.meta:users.uid",
    "system_key": {
        "access_key": "access",
        "secret_key": "secret" 
    },
    "placement_pools": [
        {
            "key": "default-placement",
            "val": {
                "index_pool": "zone2.rgw.buckets.index",
                "data_pool": "zone2.rgw.buckets.data",
                "data_extra_pool": "zone2.rgw.buckets.non-ec",
                "index_type": 0,
                "compression": "" 
            }
        }
    ],
    "metadata_heap": "",
    "tier_config": [
        {
            "key": "access_key",
            "val": "0555b35654ad1656d804" 
        },
        {
            "key": "s3_endpoint",
            "val": "http://localhost:8006" 
        },
        {
            "key": "secret",
            "val": "h7GhxuBLTrlhVUyxSPUKUV8r/2EI4ngqJxD7iBdBYLhwluN30JaT3Q==" 
        }
    ],
    "realm_id": "a55f8122-5da5-4e33-af59-c27047ff1fc9" 
}

Actions #1

Updated by Chang Liu over 6 years ago

➜  build git:(rgw-tier-type-check) ✗ ./bin/radosgw-admin zone create --rgw-zonegroup=s3-export --rgw-zone=zone6 --endpoints=localhost:8005 --access-key=access --secret=secret --tier-type=awsasdf --tier-config=s3_endpoint=http://localhost:8006,access_key=0555b35654ad1656d804,secret=h7GhxuBLTrlhVUyxSPUKUV8r/2EI4ngqJxD7iBdBYLhwluN30JaT3Q==
2017-12-18 17:33:33.453 7fe6537922c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-12-18 17:33:33.453 7fe6537922c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-12-18 17:33:33.453 7fe6537922c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-12-18 17:33:33.634 7fe6537922c0  0 ERROR: could not found sync module: awsasdf
failed to add zone zone6 to zonegroup s3-export: (2) No such file or directory

Actions #3

Updated by Chang Liu about 6 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF