rgw: proper error message when tier_type does not exist

at now, creating a zone does not check whether the sync module exists. we
should make sure that tier_type is valid.

Fixes: http://tracker.ceph.com/issues/22469

Signed-off-by: Chang Liu <liuchang0812@gmail.com>
Signed-off-by: lvshanchun <lvshanchun@gmail.com>